--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
             <h3 id="closeControlsButton" onclick="document.getElementById('controlsBox').style.visibility = 'hidden'; document.getElementById('canvas').style.pointerEvents = 'all'">✖</h3>
         </div>
         <div class="controlsBoxGrid">
-            <span>Move objects</span>
+            <span>Grab objects</span>
             <kbd>LMB</kbd>
             <span>Spawn objects</span>
             <kbd>RMB</kbd>
+            <span>Switch to box</span>
+            <kbd>1</kbd>
+            <span>Switch to circle</span>
+            <kbd>2</kbd>
             <span>Delete all objects</span>
             <kbd>\</kbd>
             <span>Open controls menu</span>
