--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mttrbox</title>
+    <meta name="description" content="A small physics sandbox.">
     <link rel="stylesheet" href="./assets/styles/index.css">
     <script src="./assets/scripts/matter.min.js"></script>
+    <script src="./assets/scripts/howler.min.js"></script>
     <script defer src="./assets/scripts/mttrbox.js"></script>
 	<link rel="icon" href="./assets/logo/favicon.png" type="image/png">
 </head>
@@ -31,6 +33,10 @@
             <kbd>1</kbd>
             <span>Switch to circle</span>
             <kbd>2</kbd>
+            <span>Switch to triangle</span>
+            <kbd>3</kbd>
+            <span>Switch to pentagon</span>
+            <kbd>4</kbd>
             <span>Delete all objects</span>
             <kbd>\</kbd>
             <span>Open controls menu</span>
@@ -40,6 +46,5 @@
     </div>
     
     <canvas oncontextmenu="return false;" id="canvas"></canvas>
-    
 </body>
 </html>
